Fixing the side by side missalignment issue.

--- a/style.css
+++ b/style.css
@@ -9,9 +9,6 @@ form.panel label {
   display: block !important;
   font-family: "Noto Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol" !important;
-  font-size: 16px !important;
-  font-weight: 600 !important;
   height: 24px !important;
   image-rendering: -webkit-optimize-contrast !important;
   letter-spacing: 0.15px !important;
@@ -19,7 +16,7 @@ form.panel label {
   pointer-events: auto !important;
   text-size-adjust: 100% !important;
   vertical-align: middle !important;
-  width: 884.172px !important;
+  /* width: 884.172px !important; */
   -webkit-font-smoothing: antialiased !important;
 }
 
@@ -62,7 +59,7 @@ form.panel span.text-danger {
   text-decoration-style: solid !important;
   text-decoration-thickness: auto !important;
   text-size-adjust: 100% !important;
-  width: 8.96875px !important;
+  /* width: 8.96875px !important; */
   -webkit-font-smoothing: antialiased !important;
 }
 
@@ -464,7 +461,7 @@ form.panel .radio label {
   position: relative !important;
   text-size-adjust: 100% !important;
   vertical-align: middle !important;
-  width: 884.172px !important;
+  /* width: 884.172px !important; */
   -webkit-font-smoothing: antialiased !important;
 }
 
@@ -1184,7 +1181,7 @@ form.panel button:active, button.btn:active {
       box-shadow: 0 0 0 0.188em red !important;
   }
 
-  form.panel *:not(.form-group) + * {
+  form.panel *:not(.form-group):not(.row *) + * {
     margin-top: 16px !important;
   }
 
